--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/meta-logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andy | Portfolio</title>
+    <title>Andy Chen | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
